# movie-ticket-system

./: CMakeLists.txt  CinemaService.cxx  Database.cxx  Entities.cpp  Entities.cxx  MovieService.cxx  MovieTicketSystemUI.cxx  OrderService.cxx  ScreeningService.cxx  Service.Cinema.cxx  Service.Movie.cxx  Service.Order.cxx  Service.Screening.cxx  Service.User.cxx  UserService.cxx  main_database.cpp  xmake.lua
include/: Database.h  Entities.h  UserService.h
src/: Database.cpp  Datebase.cpp
test/: AuthView.cxx  CinemaService.cxx  Database.cxx  Entities.cxx  MainController.cxx  MovieService.cxx  MovieTicketSystemUi.cxx  MovieView.cxx  OrderService.cxx  OrderView.cxx  ScreeningService.cxx  Service.Cinema.cxx  Service.Movie.cxx  Service.Order.cxx  Service.Screening.cxx  Service.User.cxx  TicketView.cxx  UserService.cxx  View.Auth.cxx  View.Helper.cxx  View.Movie.cxx  View.Order.cxx  View.Ticket.cxx  ViewHelper.cxx
view/: AuthView.cxx  MainController.cxx  MovieView.cxx  OrderView.cxx  TicketView.cxx  View.Auth.cxx  View.Helper.cxx  View.Movie.cxx  View.Order.cxx  View.Ticket.cxx  ViewHelper.cxx
